Ajustes de layout na tabela de editais
+ Bookmark com bootstrap-icons
+ Placeholder correto para campo de busca aberto

--- a/src/app/_components/details/details.component.html
+++ b/src/app/_components/details/details.component.html
@@ -44,7 +44,7 @@
                   </label>
                 </div>
               </button>
-              <button>
+              <button title="Disponivel apenas para plano Premium">
                 <div>
                   <span class="icons_google material-symbols-outlined">
                     share 
