--- a/src/app/_components/search/search.component.scss
+++ b/src/app/_components/search/search.component.scss
@@ -110,17 +110,17 @@
         color: #818181;
         font-size: 1rem;
     }
-    .name {
-        padding-left: 5%;
-    }
-    .agency{
-        display: flex;
-        justify-content: center;
-    }
+    // .name {
+    //     padding-left: 5%;
+    // }
+    // .agency{
+    //     display: flex;
+    //     justify-content: center;
+    // }
 }
-.agency{
-    justify-content: center;
-}
+// .agency{
+//     justify-content: center;
+// }
 .edital-name {
     padding-left: 2%;
     display: flex;
@@ -159,35 +159,43 @@
     margin: 0%;
     font-weight: 600;
     font-size: 0.9rem;
+    
     .area-List {
         flex-direction: column;
-        span {
-            background-color: #faf3cb;
-            padding: 1%;
-            margin: 1%;
-            text-align: center;
-            border-radius: 15px;
-        }
+        text-align: center;
+        // span {
+        //     background-color: #faf3cb;
+        //     padding: 1%;
+        //     margin: 1%;
+        //     text-align: center;
+        //     border-radius: 15px;
+        // }
     }
     .row {
         align-items: center;
         padding: 1%;
     }
     .col-1, .col-3 {
-        display: flex;
+        
+        // display: flex;
     }
     .col-2 {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        padding: 0% 2%;
+        
+        // display: flex;
+        // justify-content: center;
+        // text-align: center;
+        // padding: 0% 2%;
     }
     .favorite-check {
-        padding-left: 3%;
-        .material-symbols-outlined {
-            font-weight: 200;
-            font-size: 45px;
-        }
+        cursor: pointer;
+        font-size: 1.5rem;
+        display: flex;
+        justify-content: center;
+        // padding-left: 3%;
+        // .material-symbols-outlined {
+        //     font-weight: 200;
+        //     font-size: 45px;
+        // }
     }
 }
 
@@ -236,12 +244,19 @@
     font-size: 16px;
     align-items: baseline;
 }
+
 .toggle-objectives {
+    cursor: pointer;
     font-weight: 900;
     border: none;
     font-size: 2rem;
     background: none;
     margin-left: 15%;
+    margin-top: 8px;
+}
+
+.toggle-closed {
+    margin-top: -8px;
 }
 
 .table-scroller {
@@ -254,6 +269,14 @@
     background-color: white;
     border-radius: 20px;
     /* width: 95rem; */
+
+    div.row-header {
+        
+
+        div {
+            
+        }
+    }
 }
 
 .filter-field {
