Inclusão de localização e área do usuário na página de perfil

--- a/src/app/_pages/users/user-profile/user-profile.component.html
+++ b/src/app/_pages/users/user-profile/user-profile.component.html
@@ -59,7 +59,7 @@
                                     {{isAdmVision ? userForm.controls['role'].value?.name : user.user.role}} 
                                 </span>
                             </div>
-                            <span class="localization-label">localização, placeholder</span>
+                            <span class="localization-label">{{user.user.state.abbreviation}} / {{user.user.background}}</span>
                         </div>
                     </div>
                 </div>
