Novas abas de PLano e Pagamentos

--- a/src/app/_components/recomendations/recomendations.component.scss
+++ b/src/app/_components/recomendations/recomendations.component.scss
@@ -138,6 +138,7 @@
         display: flex;
     }
     .favorite-check {
+        cursor: pointer;
         padding-left: 3%;
         .material-symbols-outlined {
             font-weight: 200;
