--- a/src/app/_components/search/search.component.html
+++ b/src/app/_components/search/search.component.html
@@ -1,139 +1,149 @@
-
 <div class="wrapper">
   <div class="title">
     <span>
-    Pesquisa de oportunidades
-  </span>
-  <label>
-    Use os filtros para encontrar o que procura
-  </label>
+      Pesquisa de oportunidades
+    </span>
+    <label>
+      Use os filtros para encontrar o que procura
+    </label>
   </div>
   <div class="container">
-   <div class="wrapper"> 
-    <form [formGroup]="filterForm" (submit)="filter()"> 
-      <div class="header">
-        <div class="search-bar">
-          <input type="text" name="" id="" placeholder="Pesquisar por nome e instituição" formControlName = "agency">
-          <button class="dds__icons dds__search"></button>
-        </div>
-        
-        <div class="filter"> 
-          <div id="dropdownMenuClickableOutside" class="filter-button" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="false">
-            <span class="material-symbols-outlined">filter_list</span>
-            <label>
-              Filtros
-            </label>
+    <div class="wrapper">
+      <form [formGroup]="filterForm" (submit)="filter()">
+        <div class="header">
+          <div class="search-bar">
+            <input type="text" name="" id="" placeholder="Pesquisar por nome e instituição" formControlName="agency">
+            <button class="dds__icons dds__search"></button>
           </div>
-          <div id="filter-modal" class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuClickableOutside">
-            <div class="close-btn">
-              <span class="material-symbols-outlined" (click)="cancelFilter()">
-                close
-              </span>
+
+          <div class="filter">
+            <div id="dropdownMenuClickableOutside" class="filter-button" data-bs-toggle="dropdown" aria-expanded="false"
+              data-bs-auto-close="false">
+              <span class="material-symbols-outlined">filter_list</span>
+              <label>
+                Filtros
+              </label>
             </div>
-            <app-search-filter-dropdown (filteParams)="setFilter($event)"></app-search-filter-dropdown>
-            <div class="filter-buttons">
-              <button type="button" class="btn btn-close-filter" (click)="clear()">Limpar</button>
-              <button type="button" class="btn btn-apply-filter" (click)="applyCustomFilter()">Filtrar</button>
-            </div>
-          </div>
-        </div>
-      </div>  
-    </form>
-    <div class="responsive-table">
-      <div class="table-backgound">
-        <div class="row row-header">
-          <div class="col-3 name text-center">
-            <span>Nome</span>
-          </div>
-          <div class="col-1 filter-field text-center justify-content-center" (click)="orderByInstitute()">
-            <span>Instituição</span>
-            <div class="static-filter">
-              <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : agencyOrder == 'ASC'}"></span>
-              <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : agencyOrder == 'DESC'}"></span>
-            </div>
-          </div>
-          <div class="col-2 filter-field text-center justify-content-center" (click)="orderBySubmission()">
-            <span>Início</span>
-            <div class="static-filter">
-              <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : submission == 'ASC'}"></span>
-              <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : submission == 'DESC'}"></span>
-            </div>
-          </div>
-          <div class="col-1 filter-field text-center justify-content-center" (click)="orderByfinancingValue()">
-            <span>Valor</span>
-            <div class="static-filter">
-              <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : financingValue == 'ASC'}"></span>
-              <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : financingValue == 'DESC'}"></span>
-            </div>
-          </div>
-          <div class="col-1 text-center">
-            <span>Afinidade</span>
-          </div>
-          <div class="col-2 text-center">
-            <span>Área</span>
-          </div>
-          <div class="col-1 text-center">
-            <span>Favoritar</span>
-          </div>
-          <div class="col-1">
-            &nbsp;
-          </div>
-        </div>
-        <div>
-          <div class="table-scroller">
-          <div class="table-content-no-data dark_row" *ngIf="editais.length === 0">
-            <span>Nenhum resultado encontrado</span>
-          </div>
-          <div class="table-content2" *ngFor="let edital of editais;  let i = index">
-            <div class="table-content"  (click)="select(i)" [ngClass]="{'dark_row': i % 2 !== 0}">
-              <div class="row" [ngClass]="{'selected': i === selected} ">
-                <div class="col-3 edital-name">
-                  <label class="dds__icons dds__server-rack-support"></label>
-                  <div>
-                    <span (click)="seeMore(edital.id)" data-toggle="tooltip" data-placement="bottom" [title]="edital.title">{{ reduceTitle(edital.title) }}</span>
-                  </div>
-                </div>
-                <div class="col-1 agency text-center">
-                  <span>{{ edital.agency }}</span>
-                </div>
-                <div class="col-2 text-center">
-                  <span>{{!edital.dt_submission ? 'Não encontrado' : edital.dt_submission | date:'dd/MM/yyyy'}}</span>
-                </div>
-                <div class="col-1 text-center">
-                  <span>
-                    {{ edital.ds_currency }} 
-                    {{!edital.nm_financing_value ? 'Não encontrado' : edital.nm_financing_value}}
-                  </span>
-                </div>
-                <div class="col-1 affinity-field">
-                  <span>{{ edital.Afinidade ??  '10' }}</span>
-                </div>
-                <div class="col-2 area-List">
-                  <span *ngFor="let item of edital.areaList">{{ reduceArea(item) }}</span>
-                </div>
-                <div class="col-1 favorite-check">
-                  <!-- <span class="material-symbols-outlined">bookmark</span> -->
-                  <i class="bi bi-bookmark ms-5"></i>
-                </div>
-                <div class="col-1">
-                  <button class="toggle-objectives closed" [id]="'toggle-' + i" (click)="toggleDetails(i)">⌵</button>
-                </div>
+            <div id="filter-modal" class="dropdown-menu dropdown-menu-end"
+              aria-labelledby="dropdownMenuClickableOutside">
+              <div class="close-btn">
+                <span class="material-symbols-outlined" (click)="cancelFilter()">
+                  close
+                </span>
               </div>
-              <div class="row table-objectives" [ngClass]="{'selected': i === selected}" [id]="'details-' + i" hidden>
-                <div class="col-12">
-                  <label>Objetivos: </label>
-                  <span>{{ edital.objective }}</span>
-                  <div>
-                    <a (click)="seeMore(edital.id)">Ver mais</a>
-                  </div>
-                </div>
+              <app-search-filter-dropdown (filteParams)="setFilter($event)"></app-search-filter-dropdown>
+              <div class="filter-buttons">
+                <button type="button" class="btn btn-close-filter" (click)="clear()">Limpar</button>
+                <button type="button" class="btn btn-apply-filter" (click)="applyCustomFilter()">Filtrar</button>
               </div>
             </div>
           </div>
+        </div>
+      </form>
+      <div class="responsive-table">
+        <div class="table-backgound">
+          <div class="row row-header">
+            <div class="col-3 name text-center">
+              <span>Nome</span>
+            </div>
+            <div class="col-1 filter-field text-center justify-content-center" (click)="orderByInstitute()">
+              <span>Instituição</span>
+              <div class="static-filter">
+                <span class="dds__icons dds__chevron-up" [ngClass]="{'arrow-highlight' : agencyOrder == 'ASC'}"></span>
+                <span class="dds__icons dds__chevron-down"
+                  [ngClass]="{'arrow-highlight' : agencyOrder == 'DESC'}"></span>
+              </div>
+            </div>
+            <div class="col-2 filter-field text-center justify-content-center" (click)="orderBySubmission()">
+              <span>Início</span>
+              <div class="static-filter">
+                <span class="dds__icons dds__chevron-up" [ngClass]="{'arrow-highlight' : submission == 'ASC'}"></span>
+                <span class="dds__icons dds__chevron-down"
+                  [ngClass]="{'arrow-highlight' : submission == 'DESC'}"></span>
+              </div>
+            </div>
+            <div class="col-1 filter-field text-center justify-content-center" (click)="orderByfinancingValue()">
+              <span>Valor</span>
+              <div class="static-filter">
+                <span class="dds__icons dds__chevron-up"
+                  [ngClass]="{'arrow-highlight' : financingValue == 'ASC'}"></span>
+                <span class="dds__icons dds__chevron-down"
+                  [ngClass]="{'arrow-highlight' : financingValue == 'DESC'}"></span>
+              </div>
+            </div>
+            <div class="col-1 text-center">
+              <span>Afinidade</span>
+            </div>
+            <div class="col-2 text-center">
+              <span>Área</span>
+            </div>
+            <div class="col-1 text-center">
+              <span>Favoritar</span>
+            </div>
+            <div class="col-1">
+              &nbsp;
+            </div>
+          </div>
+          <div>
+            <div class="table-scroller">
+              <div class="table-content-no-data dark_row" *ngIf="editais.length === 0">
+                <span>Nenhum resultado encontrado</span>
+              </div>
+              <div class="table-content2" *ngFor="let edital of editais;  let i = index">
+                <div class="table-content" (click)="select(i)" [ngClass]="{'dark_row': i % 2 !== 0}">
+                  <div class="row" [ngClass]="{'selected': i === selected} ">
+                    <div class="col-3 edital-name">
+                      <label class="dds__icons dds__server-rack-support"></label>
+                      <div>
+                        <span (click)="seeMore(edital.id)" data-toggle="tooltip" data-placement="bottom"
+                          [title]="edital.title">{{ reduceTitle(edital.title) }}</span>
+                      </div>
+                    </div>
+                    <div class="col-1 agency text-center">
+                      <span>{{ edital.agency }}</span>
+                    </div>
+                    <div class="col-2 text-center">
+                      <span>{{!edital.dt_submission ? 'Não encontrado' : edital.dt_submission |
+                        date:'dd/MM/yyyy'}}</span>
+                    </div>
+                    <div class="col-1 text-center">
+                      <span>
+                        {{ edital.ds_currency }}
+                        {{!edital.nm_financing_value ? 'Não encontrado' : edital.nm_financing_value}}
+                      </span>
+                    </div>
+                    <div class="col-1 affinity-field">
+                      <span>{{ edital.Afinidade ?? '10' }}</span>
+                    </div>
+                    <div class="col-2 area-List">
+                      <span *ngFor="let item of edital.areaList">{{ reduceArea(item) }}</span>
+                    </div>
+                    <div class="col-1 favorite-check">
+                      <!-- <span class="material-symbols-outlined">bookmark</span> -->
+                      <i class="bi ms-5" [class.bi-bookmark]="!edital.saved" [class.bi-bookmark-fill]="edital.saved"
+                        [class.text-warning]="edital.saved" (click)="bookmarkEdital(edital)"></i>
+                    </div>
+                    <div class="col-1">
+                      <button class="toggle-objectives closed" [id]="'toggle-' + i"
+                        (click)="toggleDetails(i)">⌵</button>
+                    </div>
+                  </div>
+                  <div class="row table-objectives" [ngClass]="{'selected': i === selected}" [id]="'details-' + i"
+                    hidden>
+                    <div class="col-12">
+                      <label>Objetivos: </label>
+                      <span>{{ edital.objective }}</span>
+                      <div>
+                        <a (click)="seeMore(edital.id)">Ver mais</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+
     </div>
-  
-  </div> 
-</div>
+  </div>
