Página de editais salvos (bookmark)

--- a/src/app/_components/bookmark/bookmark.component.html
+++ b/src/app/_components/bookmark/bookmark.component.html
@@ -1,15 +1,17 @@
 <div class="wrapper">
   <div class="title">
     <span>
-      Pesquisa de oportunidades
+      Editais Salvos
     </span>
-    <label>
+    <!-- <label>
       Use os filtros para encontrar o que procura
-    </label>
+    </label> -->
   </div>
   <div class="container">
+    
     <div class="wrapper">
-      <form [formGroup]="filterForm" (submit)="filter()">
+      
+      <!-- <form [formGroup]="filterForm" (submit)="filter()">
         <div class="header">
           <div class="search-bar">
             <input type="text" name="" id="" placeholder="Pesquisar por nome e instituição" formControlName="agency">
@@ -39,7 +41,8 @@
             </div>
           </div>
         </div>
-      </form>
+      </form> -->
+
       <div class="responsive-table">
         <div class="table-backgound">
           <div class="row row-header">
