--- a/src/app/_components/recomendations/recomendations.component.html
+++ b/src/app/_components/recomendations/recomendations.component.html
@@ -42,7 +42,7 @@
                         <span>Área</span>
                       </div>
                       <div class="col-2 favorite-check">
-                        <span>Favoritar</span>
+                        <span>Salvar</span>
                       </div>
                     </div>                         
                          
