--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,8 @@
               <span class="ms-1 menu-item-label">Pesquisa</span>
             </a>
           </li>
-          <li class="nav-item disabled">
-            <a [routerLink]="['/']" class="nav-link align-middle px-0">
+          <li class="nav-item">
+            <a [routerLink]="['/bookmark']" class="nav-link align-middle px-0">
               <span class="icons_google material-symbols-outlined">
                 bookmark
               </span>
