Editais salvos na página de recomendações

--- a/src/app/_components/details/details.component.html
+++ b/src/app/_components/details/details.component.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
   <app-breadcrumb [pages]="breadcrumbPages"></app-breadcrumb>
   <div class="title">
-    <span class="dds__icons dds__chevron-left" (click)="router.navigate(['/search'])"></span>
+    <span class="dds__icons dds__chevron-left back" (click)="router.navigate(['/search'])"></span>
     <span>
       Detalhes do edital
     </span>
