Adicionando landing page no projeto
Trazendo o codigo do que foi implementado anteriormente para o projeto. Fazendo algumas adaptações  para corresponder a estrutura do projeto

--- a/src/app/_components/password-recovery/password-recovery.component.scss
+++ b/src/app/_components/password-recovery/password-recovery.component.scss
@@ -117,3 +117,25 @@ a {
     padding-right: 1.2%;
   }
 }
+
+@media (max-width:768px) {
+  .title{
+    font-size: 2rem;
+  }
+  #recovery-password-container{
+    width: auto !important;
+  }
+}
+
+@media (max-width:428px) {
+  .title{
+    font-size: 1.5rem;
+  }
+  .buttons{
+    flex-direction: column;
+    margin-top: 1rem;
+    button, .btn-cancel {
+      width: 100%;
+    }
+  }
+}
