--- a/src/app/_pages/users/user-profile/user-profile.component.html
+++ b/src/app/_pages/users/user-profile/user-profile.component.html
@@ -76,9 +76,8 @@
                                 <span>
                                     {{isAdmVision ? userForm.controls['role'].value?.name : authService.user.role}}
                                 </span>
-                            </div>
-                            <span class="localization-label">{{authService.user.state.abbreviation}} /
-                                {{authService.user.background}}</span>
+                            </div> 
+                            <span class="localization-label">{{authService.user.background}}</span>
                         </div>
                     </div>
                 </div>
