--- a/src/app/_components/details/details.component.scss
+++ b/src/app/_components/details/details.component.scss
@@ -46,19 +46,33 @@
         font-size: 1.3rem;
     }
     button {
-        cursor: not-allowed;
+        
         border: 1px solid #242424dd;
         color: #242424dd;
         border-radius: 4px;
         background: none;
         margin-right: 20px;
+
         label {
+            cursor: pointer;
+        }
+        &.na {
             cursor: not-allowed;
+            label {
+                cursor: not-allowed;
+            }
         }
         div {
             display: flex;
             align-items: center;
             padding: 5px;
+        }
+
+        .favorite-check {
+            cursor: pointer;
+            font-size: 1.6rem;
+            display: flex;
+            justify-content: center;
         }
     }
 
